# assessment-py

./: .gitignore  ASSESSMENT.md  README.md  pyproject.toml
cer_scraper/: __init__.py  __main__.py  config.py  downloader.py  drive.py  manifest.py  models.py  retry.py  search.py  utils.py
config/: application_type_ids.csv  application_types.txt
