[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cer-regdocs-scraper"
version = "0.1.0"
description = "Monthly CER REGDOCS document harvesting scaffold."
requires-python = ">=3.9"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "httpx>=0.27.0",
  "playwright>=1.45.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
drive = [
  "google-api-python-client>=2.137.0",
  "google-auth>=2.32.0",
  "google-auth-oauthlib>=1.2.1",
]

[project.scripts]
cer-regdocs = "cer_scraper.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
packages = ["cer_scraper"]
